# transcript-qwen-asr

./: README.md  pyproject.toml  requirements.txt  transcript-qwen-asr.py
src/transcript_qwen_asr/: __init__.py  __main__.py  audio.py  cli.py  glossary.py  output.py  transcribe.py
