[project]
name = "transcript-qwen-asr"
version = "0.1.0"
description = "Transcribe video files locally with Qwen3-ASR on an NVIDIA GPU."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "qwen-asr>=0.0.6",
    "torch>=2.11",
    "numpy>=1.26",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.scripts]
transcript-qwen-asr = "transcript_qwen_asr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript_qwen_asr"]

# uv resolves torch from the matching CUDA wheel index.
# Default: cu130 (PyTorch 2.11 stable, native Blackwell sm_100/sm_120 support,
# matches CUDA 13.x drivers).
# Fallback to cu128 if you hit dependency-resolution issues, or to cu126/cu124
# for older drivers (those wheels do NOT support Blackwell — Blackwell needs ≥ cu128).
[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
